# brain-annex

./: .gitattributes  .gitignore  Caddyfile  Caddyfile_example  LICENSE.txt  README.md  VERSION_NUMBER.txt  app_build.py  config.defaults.ini  diagnostics.ipynb  diagnostics.py  diagnostics_db.ipynb  diagnostics_db_connect_1_MANUAL.py  diagnostics_db_connect_2_FROM_ENV_VARS.py  diagnostics_db_connect_3_FROM_CONFIG.py  environment.yml  initialize_installation.py  initialize_schema.py  install_local_libraries.bat  main.py  process.py  process2.py  process3.py  process4.py  process5.py  pyproject for neo4jv4.toml  pyproject for neo4jv5.toml  pyproject.toml  quick.bat  read_config.py  requirements.txt
BrainAnnex/: __init__.py  initialize.py
app_libraries/: data_manager.py  documentation_generator.py  initialize.py  media_manager.py  node_explorer.py  upload_helper.py
brainannex/: __init__.py  categories.py  collections.py  cypher_utils.py  data_manager.py  documentation_generator.py  full_text_indexing.py  graph_access.py  graph_schema.py  graphaccess.py  graphschema.py  initialize.py  media_manager.py  neoaccess.py  neoschema.py  node_explorer.py  py_graph_visual.py  upload_helper.py  user_manager.py
home/: home_routing.py  login_manager.py  user_manager.py
init/: MINIMAL_SCHEMA_TO_IMPORT.json  OUTDATED_SAMPLE_SCHEMA_TO_IMPORT.json  SAMPLE_SCHEMA_TO_IMPORT.json
navigation/: navigation.py  navigation_routing.py
notebooks/: diagnostics.ipynb  diagnostics_db.ipynb  indexing.ipynb  indexing_tests.ipynb  set_path.py  test_1.ipynb  test_2.ipynb  tutorial_1.ipynb  (+12 more)
(+446 files in other folders)
