[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = brainannex"
version = "5.0.0.beta.41"
authors = [
  { name = "Julian West BrainAnnex.org" },
]
maintainers = [
  { email = "julian@brainannex.org" },
]
description = "Full-Stack Data/Knowledge Management with Neo4j"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"neoaccess==4.4.1",
	"numpy~=1.22.4",
	"pandas~=1.4.3",
	"pymupdf"~=1.23.5,
	"bcrypt"~=4.1.2,
	"pillow"~=10.3.0
]
keywords = [
  "graph database",
  "neo4j",
  "knowledge graph",
  "full-stack"
]

[project.urls]
Homepage = "https://brainannex.org"
"Home-page" = "https://brainannex.org"
"Bug Tracker" = "https://github.com/BrainAnnex/brain-annex/issues"
Source = "https://github.com/BrainAnnex/brain-annex"
Documentation = "https://brainannex.org"
